# branch

./: .gitignore  BRANCH_Implementation_Architecture.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/branch/: dice.yaml  gemini_llm.yaml  guardrail.yaml  llm_judge.yaml  shap.yaml
configs/datasets/: maternal_health.yaml
configs/models/: xgboost.yaml
data/processed/gallstone/: feature_metadata.json  preprocessing_summary.json  test.csv  train.csv
data/processed/load_diabetes/: feature_metadata.json  preprocessing_summary.json  test.csv  train.csv
data/processed/maternal_health/: feature_metadata.json  (+3 more)
results/tables/: table_ii_classification_results.csv  table_ii_classification_results.tex  table_iii_regression_results.csv  table_iii_regression_results.tex  table_iv_explanation_quality.csv  table_iv_explanation_quality.tex  table_iv_ragas_by_dataset.csv  table_iv_ragas_per_patient.csv  table_v_guardrail_latency.csv  table_v_guardrail_latency.tex  table_v_latency_by_dataset.csv  table_v_latency_per_patient.csv
scripts/: build_guideline_index.py  build_seeded_guardrail_benchmark.py  evaluate_explanations.py  generate_paper_tables.py  preprocess_all.py  run_branch_explanations.py  run_dice_all.py  run_gemini_variants.py  run_shap_all.py  test_llm_connection.py  train_all_models.py
src/branch/: __init__.py
tests/: test_alignment_checker.py  test_dice_constraints.py  test_guideline_loader.py  test_llm_judge.py  test_narrative_schema.py  test_ragas_external.py  test_retriever.py  test_table_iv_config.py  test_vector_store.py
(+40 files in other folders)
