[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branch-explainability"
version = "0.1.0"
description = "BRANCH: Boosted Reasoning and Agentic Narratives for Clinical Healthcare"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dice-ml>=0.11.0",
  "faiss-cpu>=1.8.0",
  "joblib>=1.3.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pypdf>=4.0.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.4.0",
  "shap>=0.45.0",
  "xgboost>=2.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
